Wrap dropwdown in main

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <script type="module" src="script.mjs"></script>
   </head>
   <body>
-    <select name="user" id="user"></select>
+    <main>
+      <select name="user" id="user"></select>
+    </main>
   </body>
 </html>
