--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html>
   <head>
+    <title>Music Data</title>
     <script type="module" src="script.mjs"></script>
   </head>
   <body>
     <main>
-      <select name="user" id="user"></select>
+      <h1>Music Data</h1>
+      <label for="user">Select a user: </label
+      ><select name="user" id="user"></select>
+      <div id="user-data"></div>
     </main>
   </body>
 </html>
